Implement Skill & Subskill Management and Template Skill Linking (#32)
* feat(skill-management, templates): implement skill and subskill management with template skill linking